make an AnVIL_Template group in sync.yml (#527)

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -39,7 +39,6 @@ group:
       jhudsl/AnVIL_Book_Getting_Started
       jhudsl/AnVIL_Book_Instructor_Guide
       jhudsl/AnVIL_Book_WDL
-      jhudsl/AnVIL_Template
       jhudsl/Adv_Reproducibility_in_Cancer_Informatics
       jhudsl/Reproducibility_in_Cancer_Informatics
       jhudsl/Dissemination_and_Engagement
@@ -82,3 +81,31 @@ group:
       dest: scripts/switch_sync_repo.R
     repos: |
       jhudsl/OTTR_Quizzes
+
+  - files:
+    - source: .github/workflows/
+      dest: .github/workflows/
+      exclude: |
+        starting-course.yml
+    - source: .github/switch_sync_repo.R
+      dest: .github/switch_sync_repo.R
+    - source: .github/ISSUE_TEMPLATE/course-problem-report.md
+      dest: .github/ISSUE_TEMPLATE/course-problem-report.md
+    - source: .github/ISSUE_TEMPLATE/course-content-add.md
+      dest: .github/ISSUE_TEMPLATE/course-content-add.md
+    - source: scripts/make_screenshots.R
+      dest: scripts/make_screenshots.R
+    - source: scripts/spell-check.R
+      dest: scripts/spell-check.R
+    - source: scripts/url-check.R
+      dest: scripts/url-check.R
+    - source: scripts/quiz-check.R
+      dest: scripts/quiz-check.R
+    - source: scripts/git_repo_check.R
+      dest: scripts/git_repo_check.R
+    - source: code_of_conduct.md
+      dest: code_of_conduct.md
+    - source: assets/box_images/
+      dest: assets/box_images/
+    repos: |
+      jhudsl/AnVIL_Template
