--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -41,6 +41,7 @@ group:
       jhudsl/AnVIL_Book_WDL
       jhudsl/Adv_Reproducibility_in_Cancer_Informatics
       jhudsl/Reproducibility_in_Cancer_Informatics
+      jhudsl/Choosing_Genomics_Tools
       jhudsl/Dissemination_and_Engagement
       jhudsl/Cancer_Clinical_Informatics
       jhudsl/Machine_Learning_for_Cancer_Informatics
