Update sync list for AnVIL_Template
Subscribing to `style.css` so we can get updates like those nice new style boxes!

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -109,5 +109,7 @@ group:
       dest: code_of_conduct.md
     - source: assets/box_images/
       dest: assets/box_images/
+    - source: assets/style.css
+      dest: assets/AnVIL_style/style.css
     repos: |
       jhudsl/AnVIL_Template
