--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -100,8 +100,9 @@ jobs:
           branch_name='preview-${{ github.event.pull_request.number }}'
           git add --force check_reports/spell_check_results.tsv || echo "No changes to commit"
           git commit -m 'Add spell check file' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=theirs
-          git push origin $branch_name || echo "No changes to commit"
+          git fetch
+          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
+          git push --force origin $branch_name || echo "No changes to commit"
 
       - name: Build components of the spell check comment
         id: build-components
