--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -35,7 +35,9 @@ jobs:
 
   file-quizzes-pr:
     name: File _Quizzes Transfer PR
-    runs-on: jhudsl/ottrpal
+    runs-on: ubuntu-latest
+    container:
+      image: jhudsl/ottrpal:latest
     needs: [yaml-check]
     if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes' || needs.yaml-check.outputs.toggle_leanpub == 'yes'}}
 
