--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -165,6 +165,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure git
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
       - name: Run styler
         run: Rscript -e "styler::style_file(list.files(pattern = 'Rmd$', recursive = TRUE, full.names = TRUE));warnings()"
 
@@ -211,7 +216,8 @@ jobs:
         git add --force check_reports/url_checks.tsv || echo "No changes to commit"
         git commit -m 'Add URL check file' || echo "No changes to commit"
         git fetch
-        git push origin $branch_name || echo "No changes to commit"
+        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
+        git push --force origin $branch_name || echo "No changes to commit"
 
     - name: Build components of the spell check comment
       id: build-components
@@ -299,7 +305,7 @@ jobs:
           branch_name='preview-${{ github.event.pull_request.number }}'
           git add --force question_error_report.tsv || echo "No changes to commit"
           git commit -m 'Add question error report file' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=theirs
+          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
           git push origin $branch_name || echo "No changes to commit"
 
       - name: Build components of the quiz check comment
@@ -405,8 +411,8 @@ jobs:
           echo ::set-output name=changes::$changes
           git add . --force
           git commit -m 'Render preview' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=theirs
-          git push origin $branch_name || echo "No changes to commit"
+          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
+          git push --force || echo "No changes to commit"
         shell: bash
 
       - name: Find Comment
