Add branch name for origin

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -170,9 +170,6 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-          git fetch --all
-          git checkout origin/${{ github.head_ref }}
-
       - name: Run styler
         run: Rscript -e "styler::style_file(list.files(pattern = 'Rmd$', recursive = TRUE, full.names = TRUE));warnings()"
 
@@ -180,7 +177,7 @@ jobs:
         run: |
           git add \*.Rmd
           git commit -m 'Style Rmds' || echo "No changes to commit"
-          git push origin || echo "No changes to commit"
+          git push origin/${{ github.head_ref }} || echo "No changes to commit"
 
   url-check:
     name: Check URLs
