--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -170,7 +170,7 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-          git checkout ${{ github.head_ref }}
+          git checkout ${GITHUB_REF#refs/heads/}
 
       - name: Run styler
         run: Rscript -e "styler::style_file(list.files(pattern = 'Rmd$', recursive = TRUE, full.names = TRUE));warnings()"
@@ -179,7 +179,7 @@ jobs:
         run: |
           git add \*.Rmd
           git commit -m 'Style Rmds' || echo "No changes to commit"
-          git push origin/${{ github.head_ref }} || echo "No changes to commit"
+          git push || echo "No changes to commit"
 
   url-check:
     name: Check URLs
