--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -170,7 +170,7 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-          git checkout ${GITHUB_REF_NAME}
+          git checkout ${{ github.head_ref }}
 
       - name: Run styler
         run: Rscript -e "styler::style_file(list.files(pattern = 'Rmd$', recursive = TRUE, full.names = TRUE));warnings()"
