--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -24,6 +24,27 @@ jobs:
       image: jhudsl/course_template:main
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Make branch if it doesn't exist
+      run: |
+        git config --local user.email "itcrtrainingnetwork@gmail.com"
+        git config --local user.name "jhudsl-robot"
+
+        branch_name='preview-${{ github.event.pull_request.number }}'
+        exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
+        if [[ $exists == 0 ]];then
+          echo branch doesnt exist
+          git checkout -b $branch_name || echo branch exists
+          git push --set-upstream origin $branch_name
+        else
+          echo branch does exist
+        fi
+      shell: bash
+
     - name: Run the check
       uses: jhudsl/ottr-reports@main
       id: check_results
