Declare report name

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -30,7 +30,6 @@ jobs:
         fetch-depth: 0
 
     - name: Make branch if it doesn't exist
-      id: setup
       run: |
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
@@ -45,8 +44,6 @@ jobs:
           echo branch does exist
         fi
 
-        echo ::set-output name=report_name::$(basename ${{ steps.check_results.outputs.report_path }})
-        
       shell: bash
 
     - name: Run the check
@@ -55,6 +52,10 @@ jobs:
       with:
         check_type: ${{ inputs.check_type }}
         error_min: ${{ inputs.error_min }}
+
+    - name: Declare report name
+      id: setup
+      run: echo ::set-output name=report_name::$(basename ${{ steps.check_results.outputs.report_path }})
 
     - uses: actions/upload-artifact@v3
       with:
