--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -69,7 +69,7 @@ jobs:
       run: |
         echo ::set-output name=time::$(date +'%Y-%m-%d')
         echo ::set-output name=commit_id::$GITHUB_SHA
-        echo ::set-output name=error_url::https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/${{ steps.check_results.outputs.report_path }}
+        echo ::set-output name=error_url::'https://raw.githubusercontent.com/${GITHUB_REPOSITORY}/$branch_name/${{ steps.check_results.outputs.report_path }}'
       shell: bash
 
     - name: Find Comment
