--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        token: ${{secrets.GH_PAT}}
+        token: ${{inputs.gh_pat}}
 
     - name: Make branch if it doesn't exist
       run: |
