--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -23,6 +23,11 @@ jobs:
     container:
       image: jhudsl/course_template:main
 
+    - name: Login
+      run: |
+        git config --local user.email "itcrtrainingnetwork@gmail.com"
+        git config --local user.name "jhudsl-robot"
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -32,9 +37,6 @@ jobs:
 
     - name: Make branch if it doesn't exist
       run: |
-        git config --local user.email "itcrtrainingnetwork@gmail.com"
-        git config --local user.name "jhudsl-robot"
-
         branch_name='preview-${{ github.event.pull_request.number }}'
         exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
         if [[ $exists == 0 ]];then
