Revert "Try environment thing"
This reverts commit ac469b8b570ae4499b8549f1bd28be9cfb35094e.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -66,9 +66,7 @@ jobs:
     with:
       check_type: spelling
       error_min: 3
-      environment: dev
-    secrets:
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: secrets.GH_PAT
 
   url-check:
     name: Check URLs
@@ -78,9 +76,7 @@ jobs:
     with:
       check_type: urls
       error_min: 0
-      environment: dev
-    secrets:
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: secrets.GH_PAT
 
   quiz-check:
     name: Check quiz formatting
@@ -90,9 +86,7 @@ jobs:
     with:
       check_type: quiz_format
       error_min: 0
-      environment: dev
-    secrets:
-      gh_pat: ${{ secrets.GH_PAT }}
+      gh_pat: secrets.GH_PAT
 
 ############################# Style the code ###################################
   style-code:
