--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -84,6 +84,10 @@ jobs:
       id: commit
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
+
+        git config --local user.email "itcrtrainingnetwork@gmail.com"
+        git config --local user.name "jhudsl-robot"
+        
         git add check_reports --force
         git commit -m 'Add ${{ steps.check_results.outputs.report_path }}' || echo "No changes to commit"
         git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
