--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -87,11 +87,12 @@ jobs:
 
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
-        
-        git add check_reports --force
-        git commit -m 'Add ${{ steps.check_results.outputs.report_path }}' || echo "No changes to commit"
-        git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
-        git push --force || echo "No changes to commit"
+
+        git add --force check_reports/* || echo "No changes to commit"
+        git commit -m 'Add check file' || echo "No changes to commit"
+        git fetch
+        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
+        git push --force origin $branch_name || echo "No changes to commit"
       shell: bash
 
     - name: Find Comment
