--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Make branch if it doesn't exist
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
-        exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
+        exists=$(git ls-remote https://${{ inputs.gh_pat }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
         if [[ $exists == 0 ]];then
           echo branch doesnt exist
           git checkout -b $branch_name || echo branch exists
