--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -75,7 +75,7 @@ jobs:
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
-        git add --force check_reports/* || echo "No changes to commit"
+        git add --force . || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
         git fetch
         git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
