--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -100,8 +100,7 @@ jobs:
           branch_name='preview-${{ github.event.pull_request.number }}'
           git add --force check_reports/spell_check_results.tsv || echo "No changes to commit"
           git commit -m 'Add spell check file' || echo "No changes to commit"
-          git fetch
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
+          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
           git push --force origin $branch_name || echo "No changes to commit"
 
       - name: Build components of the spell check comment
@@ -165,13 +164,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Configure git
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-          git checkout ${{ github.head_ref }}
-
       - name: Run styler
         run: Rscript -e "styler::style_file(list.files(pattern = 'Rmd$', recursive = TRUE, full.names = TRUE));warnings()"
 
@@ -179,7 +171,7 @@ jobs:
         run: |
           git add \*.Rmd
           git commit -m 'Style Rmds' || echo "No changes to commit"
-          git push || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
 
   url-check:
     name: Check URLs
@@ -218,7 +210,7 @@ jobs:
         git add --force check_reports/url_checks.tsv || echo "No changes to commit"
         git commit -m 'Add URL check file' || echo "No changes to commit"
         git fetch
-        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
+        git merge -s recursive --strategy-option=ours origin/${{ github.head_ref }} --allow-unrelated-histories
         git push --force origin $branch_name || echo "No changes to commit"
 
     - name: Build components of the spell check comment
