Try to set up the error_num another way

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -108,20 +108,20 @@ jobs:
         edit-mode: replace
 
     - name: Fail if too many errors
-      if: ${{ steps.setup.outputs.error_num > inputs.error_min }}
+      if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
       run: |
         echo ${{ steps.setup.outputs.error_num }}
         exit 1
       shell: bash
 
     - name: Don't fail if not too many errors
-      if: ${{ steps.setup.outputs.error_num <= inputs.error_min }}
+      if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
       run: |
         echo ${{ steps.setup.outputs.error_num }}
       shell: bash
 
     - name: No errors
-      if: ${{ steps.setup.outputs.error_num <= inputs.error_min }}
+      if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
       uses: peter-evans/create-or-update-comment@v1
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
