--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -50,11 +50,6 @@ jobs:
           echo ::set-output name=error_name::'quiz formatting errors'
         fi
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: ${{ steps.setup.outputs.report_name }}
-        path: ${{ steps.check_results.outputs.report_path }}
-
 ############################# Handle commenting ################################
 
     - name: Build components of the spell check comment
@@ -95,7 +90,7 @@ jobs:
         body-includes: ${{ steps.setup.outputs.error_name }}
 
     - name: There are errors!
-      if: ${{ steps.setup.outputs.error_num > inputs.error_min }}
+      if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
       uses: peter-evans/create-or-update-comment@v1
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -110,14 +105,14 @@ jobs:
     - name: Fail if too many errors
       if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
       run: |
-        echo ${{ steps.setup.outputs.error_num }}
+        echo ${{ steps.commit.outputs.error_num }}
         exit 1
       shell: bash
 
     - name: Don't fail if not too many errors
       if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
       run: |
-        echo ${{ steps.setup.outputs.error_num }}
+        echo ${{ steps.commit.outputs.error_num }}
       shell: bash
 
     - name: No errors
