--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -62,7 +62,7 @@ jobs:
     name: Check spelling
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
-    uses: ./.github/workflows/report-maker.yml
+    uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
     with:
       check_type: spelling
       error_min: 3
@@ -72,7 +72,7 @@ jobs:
     name: Check URLs
     needs: yaml-check
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-    uses: ./.github/workflows/report-maker.yml
+    uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
     with:
       check_type: urls
       error_min: 0
@@ -82,7 +82,7 @@ jobs:
     name: Check quiz formatting
     if: ${{needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
     needs: yaml-check
-    uses: ./.github/workflows/report-maker.yml
+    uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
     with:
       check_type: quiz_format
       error_min: 0
