Get staging up to date (#570)
* Revert "updating templates_to_edit image"

This reverts commit f95a790fa90b005c233875d1aadd8194db0b5a7b.

forgot I was on main#

* Revert "updating issue pics"

This reverts commit fbc1c3eeeff2d36332a4e26508a1907cdea98784.

forgot I was on main

* Add report-maker.yml here.  (#512)

* delete report.maker.yml

* Add report-maker.yml here

* Need to add + 1 because the column names don't count

* change strategy for declaring error_min

* Try to fix syntax around inputs.error_min

* Try this

* Update report-maker.yml

* substract 1

* Forgot to delete old attempt

* Try to fix chk_results declarations

* Get rid of straggling quote

* Print out error number

* Fix reports

* Set version

* specify git_path

* Fix file path

* Try copying over?

* ls workspace

* Nope that didn't work

* Set version

* Change version

* Check all the urls

* Don't need to specify git_path

* force pass true

* exclude docs and manuscript folder

* exclude files

* try to add Rmd

* Write our own url-checking script and get away from using url-checker-actions (#515)

* Add url-checker to docker image

* Add url-check.R adds!

* Revert "Add url-checker to docker image "

This reverts commit fe5c7ed0e207ea84959369f5649df2ead13832cb.

* Update report-maker.yml

* Add course formats bullet point template (#516)

* Add course formats bullet points to template

* Also add ottrpal to dictionary.txt

* Render bookdown

* Update scripts so url check is fixed (#518)

* Update scripts

* try to fix url checker

* Add a broken url as a test

* rearrange steps

* get rid of -1

* get rid of extra stuff

* Fix results Thing

* Fix file path

* .csv -> .tsv

* Revert "Add a broken url as a test"

This reverts commit 973453fa82a121032a15ff78a7ef9729829225d5.

* Add files via upload

* Add ability to ignore a url in the url checker (#520)

* Try to ignore s

--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           # Cleanup
           rm -rf \
+            .github/workflows/report-maker.yml \
             .github/workflows/send-updates.yml \
             .github/workflows/test-send-updates.yml \
             .github/sync.yml \
@@ -87,7 +88,7 @@ jobs:
 
       # Issue for what repository settings need to be set
       - name: New Course - Set Repository Settings
-        uses: peter-evans/create-issue-from-file@v2.3.2
+        uses: peter-evans/create-issue-from-file@v4
         with:
           title: New Course - Set Repository Settings
           content-filepath: .github/automatic-issues/set-repo-settings.md
@@ -95,7 +96,7 @@ jobs:
 
       # Issue for what needs to be edited
       - name: New Course - Templates to Edit
-        uses: peter-evans/create-issue-from-file@v2.3.2
+        uses: peter-evans/create-issue-from-file@v4
         with:
           title: New Course - Templates to Edit
           content-filepath: .github/automatic-issues/templates-to-edit.md
@@ -103,7 +104,7 @@ jobs:
 
       # Issue for how to enroll repo for updates
       - name: New Course - Template Update Enrollment
-        uses: peter-evans/create-issue-from-file@v2.3.2
+        uses: peter-evans/create-issue-from-file@v4
         with:
           title: New Course - Template Update Enrollment
           content-filepath: .github/automatic-issues/update-enrollment.md
@@ -111,7 +112,7 @@ jobs:
 
       # Issue for adding a method of feedback
       - name: Reminder - Add a method of user feedback
-        uses: peter-evans/create-issue-from-file@v2.3.2
+        uses: peter-evans/create-issue-from-file@v4
         with:
           title: Reminder - Add user feedback method
           content-filepath: .github/automatic-issues/add-feedback-method.md
@@ -127,7 +128,7 @@ jobs:
       # Issue for adding the course to the jhudsl library
       - name: Reminder - Add to jhudsl library
         if: ${{ steps.get_org_name.outputs.org_name == 'jhudsl' }}
-        uses: peter-evans/create-issue-from-file@v2.3.2
+        uses: peter-evans/create-issue-from-file@v4
         with:
           title: Reminder - Add to jhudsl library
           content-filepath: .github/automatic-issues/add-to-library.md
