--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,20 +31,20 @@ jobs:
              docker/Dockerfile
              docker/github_package_list.tsv
 
-      - name: Make branch if it doesn't exist
+      # Delete the branch if this has been run before
+      - name: Delete branch locally and remotely
+        run: git push origin --delete preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
+
+      # Make the branch fresh
+      - name: Make the branch fresh
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
           branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name || echo branch exists
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-          fi
+          echo branch doesnt exist
+          git checkout -b $branch_name || echo branch exists
+          git push --set-upstream origin $branch_name
         shell: bash
 
     outputs:
