--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -44,6 +44,7 @@ group:
       tmm211/dsp-terra-mooc-test2
       fhdsl/Choosing_Genomics_Tools
       fhdsl/NIH_Data_Sharing
+      fhdsl/FH_Cluster_Guide
 ###ADD NEW REPO HERE following the format above#
 
 ### These are custom groups for syncing -- not all files needs to be synced
