--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -45,6 +45,7 @@ group:
       fhdsl/Choosing_Genomics_Tools
       fhdsl/NIH_Data_Sharing
       fhdsl/FH_Cluster_Guide
+      fhdsl/Using_Leanpub
 ###ADD NEW REPO HERE following the format above#
 
 ### These are custom groups for syncing -- not all files needs to be synced
