--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -46,7 +46,7 @@ group:
       fhdsl/NIH_Data_Sharing
       fhdsl/FH_Cluster_Guide
       fhdsl/Using_Leanpub
-      fudsl/Overleaf_Tutorial
+      fhdsl/Overleaf_Tutorial
 ###ADD NEW REPO HERE following the format above#
 
 ### These are custom groups for syncing -- not all files needs to be synced
