--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,11 +24,10 @@ jobs:
         with:
             files: config_automation.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
 
-      - name: Verify Dockerfiles changed?
-        uses: tj-actions/verify-changed-files@v13
+      - uses: tj-actions/changed-files@v35
         id: verify-changed-files
         with:
-          files: docker
+          files: docker/**
 
       # Delete the branch if this has been run before
       - name: Delete branch locally and remotely
