--- a/.github/workflows/send-updates.yml
+++ b/.github/workflows/send-updates.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
+          git config --system --add safe.directory "$GITHUB_WORKSPACE"
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
@@ -30,11 +31,11 @@ jobs:
         run: |
           if [ github.event.inputs.prtag == 'null' ]
           then
-            echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
+            echo "version=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_OUTPUT
           fi
           if [ github.event.inputs.prtag != 'null' ]
           then
-            echo ::set-output name=version::${{ github.event.inputs.prtag }}
+            echo "version=${{ github.event.inputs.prtag }}" >> $GITHUB_OUTPUT
           fi
 
       - name: Run Mechanics File Sync
