--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
+          git config --system --add safe.directory "$GITHUB_WORKSPACE"
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
